# azure-ai-agent-team

./: .env_sample  .gitignore  README.md  README_TRACING.md  agent_team_code_review.py  code_review_report.md  language_agents.yaml  pyproject.toml  requirements.txt
code-input/: AzureResourceService.cs  cloud_resources.py
utils/: agent_team.py  agent_team_config.yaml
